--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,92 +3,96 @@
 @tailwind utilities;
 
 @layer base {
-	:root {
-		--white: 255 255 255;
-		--black: 0 0 0;
+    :root {
+        --white: 255 255 255;
+        --black: 0 0 0;
 
-		--primary-50: 247 243 255;
-		--primary-100: 241 233 254;
-		--primary-200: 229 214 254;
-		--primary-300: 208 181 253;
-		--primary-400: 180 139 250;
-		--primary-500: 149 92 246;
-		--primary-600: 124 58 237;
-		--primary-700: 105 40 217;
-		--primary-800: 88 33 182;
-		--primary-900: 73 29 149;
-		--primary-950: 47 16 101;
+        --primary-50: 247 243 255;
+        --primary-100: 241 233 254;
+        --primary-200: 229 214 254;
+        --primary-300: 208 181 253;
+        --primary-400: 180 139 250;
+        --primary-500: 149 92 246;
+        --primary-600: 124 58 237;
+        --primary-700: 105 40 217;
+        --primary-800: 88 33 182;
+        --primary-900: 73 29 149;
+        --primary-950: 47 16 101;
 
-		--secondary-50: 239 245 255;
-		--secondary-100: 219 232 254;
-		--secondary-200: 191 215 254;
-		--secondary-300: 147 187 253;
-		--secondary-400: 96 154 250;
-		--secondary-500: 59 130 246;
-		--secondary-600: 37 112 235;
-		--secondary-700: 29 100 216;
-		--secondary-800: 30 85 175;
-		--secondary-900: 30 71 138;
-		--secondary-950: 23 46 84;
+        --secondary-50: 239 245 255;
+        --secondary-100: 219 232 254;
+        --secondary-200: 191 215 254;
+        --secondary-300: 147 187 253;
+        --secondary-400: 96 154 250;
+        --secondary-500: 59 130 246;
+        --secondary-600: 37 112 235;
+        --secondary-700: 29 100 216;
+        --secondary-800: 30 85 175;
+        --secondary-900: 30 71 138;
+        --secondary-950: 23 46 84;
 
-		--neutral-50: 246 246 246;
-		--neutral-100: 231 231 231;
-		--neutral-200: 209 209 209;
-		--neutral-300: 176 176 176;
-		--neutral-400: 136 136 136;
-		--neutral-500: 109 109 109;
-		--neutral-600: 93 93 93;
-		--neutral-700: 79 79 79;
-		--neutral-800: 69 69 69;
-		--neutral-900: 61 61 61;
-		--neutral-950: 0 0 0;
+        --neutral-50: 246 246 246;
+        --neutral-100: 231 231 231;
+        --neutral-200: 209 209 209;
+        --neutral-300: 176 176 176;
+        --neutral-400: 136 136 136;
+        --neutral-500: 109 109 109;
+        --neutral-600: 93 93 93;
+        --neutral-700: 79 79 79;
+        --neutral-800: 69 69 69;
+        --neutral-900: 61 61 61;
+        --neutral-950: 0 0 0;
 
-		--primary: var(--primary-600);
-		--on-primary: var(--white);
-		--primary-container: var(--primary-200);
-		--primary-container-low: var(--primary-300);
-		--on-primary-container: var(--primary-950);
-		--secondary: var(--secondary-600);
-		--on-secondary: var(--white);
-		--secondary-container: var(--secondary-300);
-		--on-secondary-container: var(--secondary-950);
-		--surface-dim: var(--neutral-100);
-		--surface: var(--neutral-50);
-		--surface-container: var(--neutral-100);
-		--on-surface: var(--neutral-950);
+        --primary: var(--primary-600);
+        --on-primary: var(--white);
+        --primary-container: var(--primary-200);
+        --primary-container-low: var(--primary-300);
+        --on-primary-container: var(--primary-950);
+        --secondary: var(--secondary-600);
+        --on-secondary: var(--white);
+        --secondary-container: var(--secondary-300);
+        --on-secondary-container: var(--secondary-950);
+        --surface-dim: var(--neutral-100);
+        --surface: var(--neutral-50);
+        --surface-container: var(--neutral-100);
+        --on-surface: var(--neutral-950);
+        --error-container: 248 113 113;
+        --on-error-container: var(--black);
 
-		@media (prefers-color-scheme: dark) {
-			--primary: var(--primary-600);
-			--on-primary: var(--primary-50);
-			--primary-container: var(--primary-500);
-			--primary-container-low: var(--primary-600);
-			--on-primary-container: var(--primary-50);
-			--secondary: var(--secondary-600);
-			--on-secondary: var(--secondary-50);
-			--secondary-container: var(--secondary-400);
-			--on-secondary-container: var(--secondary-50);
-			--surface-dim: var(--neutral-950);
-			--surface: var(--neutral-950);
-			--surface-container: var(--neutral-900);
-			--on-surface: var(--neutral-50);
-		}
-	}
+        @media (prefers-color-scheme: dark) {
+            --primary: var(--primary-600);
+            --on-primary: var(--primary-50);
+            --primary-container: var(--primary-500);
+            --primary-container-low: var(--primary-600);
+            --on-primary-container: var(--primary-50);
+            --secondary: var(--secondary-600);
+            --on-secondary: var(--secondary-50);
+            --secondary-container: var(--secondary-400);
+            --on-secondary-container: var(--secondary-50);
+            --surface-dim: var(--neutral-950);
+            --surface: var(--neutral-950);
+            --surface-container: var(--neutral-900);
+            --on-surface: var(--neutral-50);
+            --error-container: 248 113 113;
+            --on-error-container: var(--black);
+        }
+    }
 }
 
 html {
-	font-size: 12px;
+    font-size: 12px;
 }
 
 /* tailwind md breakpoint*/
 @media (min-width: 768px) {
-	html {
-		font-size: 14px;
-	}
+    html {
+        font-size: 14px;
+    }
 }
 
 /* tailwind lg breakpoint*/
 @media (min-width: 1024px) {
-	html {
-		font-size: 16px;
-	}
+    html {
+        font-size: 16px;
+    }
 }
